--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,5 +15,6 @@
     <footer>
         <p>&copy; {{ 'now' | date: "%Y" }} {{ site.title }}</p>
     </footer>
+    <script src="{{ '/assets/js/gallery.js' | relative_url }}"></script>
   </body>
 </html>
