--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,15 @@ body {
     color: #333;
 }
 
-header {
-    background-color: #333;
+heade.strip img {
+    max-width: 100%;
+    max-height: 75vh; /* Limit image height to 75% of viewport height */
+    height: auto;
+    border: 4px solid #333;
+    border-radius: 4px;
+    display: block;
+    margin: 0 auto; /* Center the image */
+}   background-color: #333;
     color: white;
     padding: 1rem;
     text-align: center;
@@ -193,33 +200,12 @@ body.homepage {
     background-size: 30px 30px;
 }
 
-.page-title-container {
-    position: relative;
+.page-title {
     text-align: center;
-    margin: 2rem 0 4rem 0;
-}
-
-.page-title-container h1 {
     font-size: 6rem;
-    color: #fff;
+    color: #ff4500;
     text-shadow: 5px 5px 0 #000;
-    display: inline-block;
-    position: relative;
-    z-index: 2;
-    padding: 2rem;
-}
-
-.page-title-container::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(15deg);
-    width: 350px;
-    height: 350px;
-    background-color: #ff4500;
-    clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-    z-index: 1;
+    margin: 2rem 0 4rem 0;
 }
 
 .comic-gallery .comic-card:nth-child(3n+1) {
