--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,8 @@ header {
     padding: 20px;
     text-align: center;
     border-bottom: 5px solid #d00000; /* Red */
+    background-image: radial-gradient(circle, #d00000 10%, transparent 11%);
+    background-size: 20px 20px;
 }
 
 header h1 {
@@ -129,6 +131,7 @@ body.homepage header h1 {
 
 .strip img {
     max-width: 100%;
+    max-height: 90vh;
     height: auto;
     border: 4px solid #000;
     border-radius: 5px;
