--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,15 @@ body.homepage header h1 {
     text-align: center;
     font-style: italic;
     color: #666;
+    margin-bottom: 10px;
+}
+
+.comic-strips-count {
+    text-align: center;
+    font-size: 0.9rem;
+    color: #333;
     margin-bottom: 30px;
+    font-weight: bold;
 }
 
 .strip-gallery {
@@ -160,6 +168,12 @@ body.homepage header h1 {
     background-color: #ff4d4d;
 }
 
+.gallery-nav button:disabled,
+.gallery-nav button:disabled:hover {
+    background-color: #999;
+    cursor: not-allowed;
+}
+
 .arrow {
     position: absolute;
     top: 50%;
@@ -182,6 +196,14 @@ body.homepage header h1 {
     background-color: #ffdd00;
     color: #000;
     border-color: #000;
+}
+
+.arrow:disabled,
+.arrow:disabled:hover {
+    background-color: rgba(153, 153, 153, 0.5);
+    color: #666;
+    border-color: #666;
+    cursor: not-allowed;
 }
 
 .arrow.prev {
