--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ body.homepage header h1 {
 }
 
 .comic-info h2 {
-    font-family: 'Bangers', cursive;
+    font-family: cursive;
     font-size: 2rem;
     color: #d00000;
     margin: 0 0 10px 0;
@@ -104,7 +104,7 @@ body.homepage header h1 {
 
 /* Comic Page Styles */
 .comic-page h2 {
-    font-family: 'Bangers', cursive;
+    font-family: cursive;
     font-size: 3.5rem;
     text-align: center;
     color: #d00000;
